resolved another layout issue

--- a/client/assets/styles/scss/globals/globals.scss
+++ b/client/assets/styles/scss/globals/globals.scss
@@ -19,7 +19,9 @@ body {
   // display: flex;
   // flex-direction: column;
   // height: calc(100vh - 60px);
-  // width: calc(100vw - 240px);
+  width: calc(100vw - 240px);
+  position: absolute;
+  right: 0;
 }
 
 // svg files
